<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:padding="24dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:elevation="2dp"
            android:layout_marginBottom="16dp"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:elevation="2dp"
            android:layout_marginBottom="24dp"
            android:textColor="#212121"
            android:textColorHint="#757575"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:text="@string/already_have_account"
            android:textSize="14sp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
